; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_fsm.c_FsmRestartTimer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_fsm.c_FsmRestartTimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.FsmTimer = type { i32, %struct.TYPE_6__, i8*, %struct.TYPE_7__* }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_7__ = type { i32 (%struct.TYPE_7__*, i8*, i64, i32, i32)*, i64 }

@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FsmRestartTimer(%struct.FsmTimer* %0, i32 %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca %struct.FsmTimer*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.FsmTimer* %0, %struct.FsmTimer** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %12 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %11, i32 0, i32 1
  %13 = call i64 @timer_pending(%struct.TYPE_6__* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %5
  %16 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %17 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %16, i32 0, i32 1
  %18 = call i32 @del_timer(%struct.TYPE_6__* %17)
  br label %19

19:                                               ; preds = %15, %5
  %20 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %21 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %20, i32 0, i32 1
  %22 = call i32 @init_timer(%struct.TYPE_6__* %21)
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %25 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %28 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %27, i32 0, i32 2
  store i8* %26, i8** %28, align 8
  %29 = load i64, i64* @jiffies, align 8
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* @HZ, align 4
  %32 = mul nsw i32 %30, %31
  %33 = sdiv i32 %32, 1000
  %34 = sext i32 %33 to i64
  %35 = add nsw i64 %29, %34
  %36 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %37 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %36, i32 0, i32 1
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  store i64 %35, i64* %38, align 8
  %39 = load %struct.FsmTimer*, %struct.FsmTimer** %6, align 8
  %40 = getelementptr inbounds %struct.FsmTimer, %struct.FsmTimer* %39, i32 0, i32 1
  %41 = call i32 @add_timer(%struct.TYPE_6__* %40)
  ret void
}

declare dso_local i64 @timer_pending(%struct.TYPE_6__*) #1

declare dso_local i32 @del_timer(%struct.TYPE_6__*) #1

declare dso_local i32 @init_timer(%struct.TYPE_6__*) #1

declare dso_local i32 @add_timer(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
